# TheIndependentCode-Neural-Network

./: .gitignore  README.md  activations.py  dense.py  mnist.py  mnist_conv.py  network.py  pyproject.toml  xor.py
